Se modifica funcion GET con el agregado del filtro de dispositivos

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <br/>
         <h4>Devices</h4>
 
-        <a class="waves-effect waves-light btn" id="btn-all"><i class="material-icons left">collections_bookmark</i>TODOS</a>
-        <a class="waves-effect waves-light btn" id="btn-light"><i class="material-icons left">lightbulb_outline</i>LAMPARAS</a>
-        <a class="waves-effect waves-light btn" id="btn-window"><i class="material-icons left">video_label</i>PERSIANAS</a>
-        <a class="waves-effect waves-light btn" id="btn-lamp"><i class="material-icons left">nature</i>VELADORES</a>
+        <a class="waves-effect waves-light btn" id="btn-all"><i class="material-icons left"  id="btn-all">collections_bookmark</i>TODOS</a>
+        <a class="waves-effect waves-light btn" id="btn-light"><i class="material-icons left"  id="btn-light">lightbulb_outline</i>LAMPARAS</a>
+        <a class="waves-effect waves-light btn" id="btn-window"><i class="material-icons left"  id="btn-window">video_label</i>PERSIANAS</a>
+        <a class="waves-effect waves-light btn" id="btn-lamp"><i class="material-icons left"  id="btn-lamp">nature</i>VELADORES</a>
         <ul class="collection" id='devicesList'>
         </ul>
 
